--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-router-bootstrap": "^0.26.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
